--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "dependencies": {
     "express": "^4.15.4",
     "socket.io": "^2.0.3"
+  },
+  "devDependencies": {
+    "eslint": "^4.4.1"
   }
 }
