--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node server/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha **/*.test.js",
+    "test-watch": " nodemon --exec 'npm test'"
   },
   "engines": {
     "node": "8.2.1"
@@ -13,11 +14,14 @@
   "author": "Sedim Al-Araji",
   "license": "ISC",
   "dependencies": {
+    "expect.js": "^0.3.1",
     "express": "^4.15.4",
     "moment": "^2.18.1",
     "socket.io": "^2.0.3"
   },
   "devDependencies": {
-    "eslint": "^4.4.1"
+    "eslint": "^4.4.1",
+    "expect": "^1.20.2",
+    "mocha": "^3.5.0"
   }
 }
